// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Filter instance search() should only work on multi-select "any" filters 1`] = `
Array [
  "I60801",
  "I80801",
  "I70125",
  "I70982",
  "I50179",
  "I30507",
  "I20179",
  "I85999",
  "I70179",
  "I10982",
  "I20801",
  "I40801",
  "I70801",
  "I83125",
  "I50721",
  "I81801",
  "I80721",
  "I70721",
  "I81541",
  "I80982",
]
`;

exports[`Filter Initializes to with correct default data 1`] = `
Filter {
  "checkboxIsChecked": true,
  "filterType": "userInput",
  "filterValue": "name",
  "id": "filter-1y4f6k",
  "selectType": "only",
  "selections": Array [],
  "userInputContains": true,
  "userInputValue": "",
}
`;

exports[`Filter Setters work correctly 1`] = `
Filter {
  "checkboxIsChecked": false,
  "filterType": "select",
  "filterValue": "genre",
  "id": "filter-miu5q9",
  "selectType": "any",
  "selections": Array [
    "a",
  ],
  "userInputContains": false,
  "userInputValue": "test-string",
}
`;

exports[`FilterSet Correctly adds and removes filter 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-bi44co",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "",
    },
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-to4f6u",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "love",
    },
    Filter {
      "checkboxIsChecked": true,
      "filterType": "checkbox",
      "filterValue": "isPosed",
      "id": "filter-pj37u",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "",
    },
  ],
  "id": "filterSet-zzds6s",
  "operator": "and",
}
`;

exports[`FilterSet Correctly adds and removes filter 2`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-bi44co",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "",
    },
    Filter {
      "checkboxIsChecked": true,
      "filterType": "checkbox",
      "filterValue": "isPosed",
      "id": "filter-pj37u",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "",
    },
  ],
  "id": "filterSet-zzds6s",
  "operator": "and",
}
`;

exports[`FilterSet Correctly searches when there is a mix of filter types | operator = and 1`] = `Array []`;

exports[`FilterSet Correctly searches when there is a mix of filter types | operator = or 1`] = `
Array [
  "I10001",
  "I10007",
  "I10008",
  "I10009",
  "I10010",
  "I10011",
  "I10012",
  "I10013",
  "I10014",
  "I10032",
  "I10033",
  "I10034",
  "I10065",
  "I10071",
  "I10078",
  "I10080",
  "I10097",
  "I10104",
  "I10116",
  "I10153",
  "I10173",
  "I10187",
  "I10188",
  "I10190",
  "I10192",
  "I10193",
  "I10232",
  "I10233",
  "I10247",
  "I10248",
  "I10254",
  "I10275",
  "I10303",
  "I10304",
  "I10305",
  "I10315",
  "I10316",
  "I10341",
  "I10342",
  "I10344",
  "I10363",
  "I10365",
  "I10367",
  "I10385",
  "I10421",
  "I10422",
  "I10423",
  "I10424",
  "I10426",
  "I10428",
  "I10439",
  "I10460",
  "I10461",
  "I10462",
  "I10465",
  "I10470",
  "I10474",
  "I10504",
  "I10529",
  "I10570",
  "I10573",
  "I10607",
  "I10622",
  "I10626",
  "I10629",
  "I10730",
  "I10896",
  "I11268",
  "I11341",
  "I11417",
  "I11573",
  "I12357",
  "I12358",
  "I20001",
  "I20002",
  "I20044",
  "I20045",
  "I20046",
  "I20047",
  "I20048",
  "I20049",
  "I20050",
  "I20084",
  "I20085",
  "I20087",
  "I20092",
  "I20097",
  "I20099",
  "I20101",
  "I20104",
  "I20111",
  "I20113",
  "I20114",
  "I20115",
  "I20116",
  "I20120",
  "I20121",
  "I20135",
  "I20150",
  "I20151",
  "I20155",
  "I20156",
  "I20162",
  "I20199",
  "I20200",
  "I20201",
  "I20204",
  "I20205",
  "I20215",
  "I20218",
  "I20224",
  "I20227",
  "I20228",
  "I20233",
  "I20260",
  "I20265",
  "I20266",
  "I20267",
  "I20268",
  "I20269",
  "I20301",
  "I20302",
  "I20309",
  "I20330",
  "I20371",
  "I20407",
  "I20514",
  "I20524",
  "I20613",
  "I21069",
  "I21135",
  "I21209",
  "I22088",
  "I22089",
  "I30001",
  "I30002",
  "I30003",
  "I30008",
  "I30009",
  "I30010",
  "I30012",
  "I30013",
  "I30014",
  "I30084",
  "I30094",
  "I30100",
  "I30104",
  "I30138",
  "I30251",
  "I30259",
  "I30304",
  "I30379",
  "I30509",
  "I30546",
  "I30591",
  "I40001",
  "I40002",
  "I40003",
  "I40007",
  "I40008",
  "I40009",
  "I40011",
  "I40012",
  "I40031",
  "I40032",
  "I40033",
  "I40034",
  "I40035",
  "I40036",
  "I40037",
  "I40038",
  "I40039",
  "I40040",
  "I40041",
  "I40047",
  "I40048",
  "I40049",
  "I40051",
  "I40053",
  "I40060",
  "I40061",
  "I40062",
  "I40063",
  "I40066",
  "I40067",
  "I40068",
  "I40069",
  "I40120",
  "I40121",
  "I40136",
  "I40139",
  "I40140",
  "I40144",
  "I40151",
  "I40157",
  "I40159",
  "I40160",
  "I40167",
  "I40190",
  "I40191",
  "I40208",
  "I40209",
  "I40223",
  "I40273",
  "I40275",
  "I40288",
  "I40295",
  "I40297",
  "I40298",
  "I40299",
  "I40346",
  "I40386",
  "I40389",
  "I40460",
  "I40642",
  "I50001",
  "I50002",
  "I50003",
  "I50037",
  "I50038",
  "I50039",
  "I50040",
  "I50048",
  "I50049",
  "I50050",
  "I50078",
  "I50079",
  "I50080",
  "I50081",
  "I50106",
  "I50142",
  "I50174",
  "I50228",
  "I50229",
  "I50231",
  "I50243",
  "I50244",
  "I50265",
  "I50266",
  "I50282",
  "I50283",
  "I50284",
  "I50288",
  "I50289",
  "I50293",
  "I50357",
  "I50360",
  "I50424",
  "I50594",
  "I60005",
  "I60006",
  "I60007",
  "I60024",
  "I60025",
  "I60026",
  "I60027",
  "I60035",
  "I60036",
  "I60057",
  "I60066",
  "I60067",
  "I60069",
  "I60136",
  "I60156",
  "I60157",
  "I60183",
  "I60185",
  "I60209",
  "I60210",
  "I60228",
  "I60246",
  "I60501",
  "I60573",
  "I60642",
  "I70001",
  "I70002",
  "I70013",
  "I70014",
  "I70015",
  "I70016",
  "I70025",
  "I70026",
  "I70027",
  "I70028",
  "I70064",
  "I70065",
  "I70105",
  "I70119",
  "I70120",
  "I70122",
  "I70123",
  "I70147",
  "I70148",
  "I70149",
  "I70195",
  "I70217",
  "I70218",
  "I70220",
  "I70221",
  "I70222",
  "I70225",
  "I70229",
  "I70230",
  "I70235",
  "I70275",
  "I70277",
  "I70279",
  "I70280",
  "I70344",
  "I70345",
  "I70379",
  "I70382",
  "I70383",
  "I70403",
  "I70405",
  "I70415",
  "I70419",
  "I70420",
  "I70424",
  "I70435",
  "I70454",
  "I70489",
  "I70511",
  "I70534",
  "I70537",
  "I70559",
  "I70568",
  "I70572",
  "I70575",
  "I70665",
  "I70810",
  "I71131",
  "I71199",
  "I71268",
  "I71398",
  "I72042",
  "I80006",
  "I80007",
  "I80012",
  "I80017",
  "I80051",
  "I80064",
  "I80074",
  "I80091",
  "I80092",
  "I80109",
  "I80112",
  "I80113",
  "I80119",
  "I80134",
  "I80160",
  "I80170",
  "I80179",
  "I80182",
  "I80184",
  "I80204",
  "I80210",
  "I80211",
  "I80221",
  "I80223",
  "I80228",
  "I80229",
  "I80235",
  "I80236",
  "I80237",
  "I80304",
  "I80305",
  "I80321",
  "I80351",
  "I80365",
  "I80366",
  "I80367",
  "I80387",
  "I80388",
  "I80389",
  "I80393",
  "I80394",
  "I80395",
  "I80484",
  "I80490",
  "I80549",
  "I80552",
  "I80555",
  "I80642",
  "I80643",
  "I80650",
  "I80743",
  "I80748",
  "I80878",
  "I81021",
  "I81022",
  "I81440",
  "I81442",
  "I81443",
  "I82627",
  "I82628",
  "I82837",
  "I82915",
  "I82916",
  "I82917",
  "I83256",
  "I83257",
  "I83258",
  "I83836",
  "I83837",
  "I83838",
  "I83839",
  "I83840",
  "I83841",
  "I83842",
  "I83843",
  "I83844",
  "I83845",
  "I87271",
  "I87272",
  "I87273",
  "I87274",
  "I87275",
  "I87276",
  "I87277",
  "I87278",
  "I87279",
  "I87280",
  "I880002",
  "I880006",
  "I880009",
  "I880014",
  "I880017",
  "I880022",
  "I880026",
  "I880030",
  "I880034",
  "I880038",
  "I880042",
  "I880045",
  "I880050",
  "I880053",
  "I880058",
  "I880061",
  "I880065",
  "I880070",
  "I880074",
  "I880078",
  "I880081",
  "I880086",
  "I880089",
  "I880094",
  "I880098",
  "I880101",
  "I880106",
  "I880109",
  "I880114",
  "I880118",
  "I880122",
  "I880125",
  "I880130",
  "I880134",
  "I880138",
  "I880142",
  "I880145",
  "I880149",
  "I880154",
  "I880157",
  "I90502",
  "S1354",
  "S1355",
  "S1944",
  "S1944-1",
]
`;

exports[`FilterSet Correctly searches when there is a multi-select filter with "ANY" selectType 1`] = `
Array [
  "I11573",
  "I12357",
  "I12358",
  "I22088",
  "I22089",
  "I40642",
  "I50594",
  "I60642",
  "I71398",
  "I72042",
  "I83836",
  "I83837",
  "I83838",
  "I83839",
  "I83840",
  "I83841",
  "I83842",
  "I83843",
  "I83844",
  "I83845",
  "I87271",
  "I87272",
  "I87273",
  "I87274",
  "I87275",
  "I87276",
  "I87277",
  "I87278",
  "I87279",
  "I87280",
  "I90502",
  "S1354",
  "S1355",
  "S1944",
  "S1944-1",
]
`;

exports[`FilterSet Correctly searches when there is a multi-select filter with "ANY" selectType with both operators | operator = and 1`] = `Array []`;

exports[`FilterSet Correctly searches when there is a multi-select filter with "ANY" selectType with both operators | operator = or 1`] = `
Array [
  "I11573",
  "I12357",
  "I12358",
  "I22088",
  "I22089",
  "I40642",
  "I50594",
  "I60642",
  "I71398",
  "I72042",
  "I83836",
  "I83837",
  "I83838",
  "I83839",
  "I83840",
  "I83841",
  "I83842",
  "I83843",
  "I83844",
  "I83845",
  "I87271",
  "I87272",
  "I87273",
  "I87274",
  "I87275",
  "I87276",
  "I87277",
  "I87278",
  "I87279",
  "I87280",
  "I90502",
  "S1354",
  "S1355",
  "S1944",
  "S1944-1",
]
`;

exports[`FilterSet Initializes to with correct default data 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-i8lxle",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "",
    },
  ],
  "id": "filterSet-eim0se",
  "operator": "and",
}
`;

exports[`FilterState AND filter - 'little mermaid' AND 'legend of light 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-85y4v",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "Legend of Light",
    },
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-ld59dc",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "Little Mermaid",
    },
  ],
  "id": "filterSet-kxulp",
  "operator": "and",
}
`;

exports[`FilterState AND filter - 'little mermaid' AND 'legend of light 2`] = `Array []`;

exports[`FilterState Looking up items via the NAME filter - ONLY items with "Legend of Light" included 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-rhisa",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "Legend of Light",
    },
  ],
  "id": "filterSet-456w6",
  "operator": "and",
}
`;

exports[`FilterState Looking up items via the NAME filter - ONLY items with "Legend of Light" included 2`] = `
Array [
  Object {
    "contents": Array [
      60984,
      71980,
      22025,
      30996,
      86912,
      86913,
      86910,
      86911,
      90429,
      12277,
      86915,
      86914,
    ],
    "displayName": "The Legend of Light (Suit)",
    "iconId": 22025,
    "isSuit": true,
    "key": "22025-The Legend of Light (Suit)-0",
    "posed": false,
    "variation": "0",
  },
  Object {
    "contents": Array [
      86911,
      86912,
      22026,
      86910,
      86918,
      90429,
      86916,
      86917,
      12278,
    ],
    "displayName": "The Legend of Light (Posed Suit)",
    "iconId": 22026,
    "isSuit": true,
    "key": "22026-The Legend of Light (Posed Suit)-1",
    "posed": true,
    "variation": "1",
  },
  Object {
    "contents": Array [
      "22026",
    ],
    "displayName": "The Legend of Light",
    "iconId": "22026",
    "key": "22026-The Legend of Light",
  },
]
`;

exports[`FilterState Looking up items via the NAME filter - ONLY items with "ariel" included 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-g6ck14",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "ariel",
    },
  ],
  "id": "filterSet-zx4iod",
  "operator": "and",
}
`;

exports[`FilterState Looking up items via the NAME filter - ONLY items with "ariel" included 2`] = `
Array [
  Object {
    "contents": Array [
      "90342",
    ],
    "displayName": "Yearning ♥ Ariel",
    "iconId": "90342",
    "key": "90342-Yearning ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85622",
    ],
    "displayName": "Treasure ♥ Ariel",
    "iconId": "85622",
    "key": "85622-Treasure ♥ Ariel",
  },
  Object {
    "contents": Array [
      "21771",
    ],
    "displayName": "Travel ♥ Ariel",
    "iconId": "21771",
    "key": "21771-Travel ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85627",
    ],
    "displayName": "Strong Soul ♥ Ariel",
    "iconId": "85627",
    "key": "85627-Strong Soul ♥ Ariel",
  },
  Object {
    "contents": Array [
      "40766",
    ],
    "displayName": "Slumber ♥ Ariel",
    "iconId": "40766",
    "key": "40766-Slumber ♥ Ariel",
  },
  Object {
    "contents": Array [
      "11990",
    ],
    "displayName": "Purity ♥ Ariel",
    "iconId": "11990",
    "key": "11990-Purity ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85619",
    ],
    "displayName": "Ocean Crown ♥ Ariel",
    "iconId": "85619",
    "key": "85619-Ocean Crown ♥ Ariel",
  },
  Object {
    "contents": Array [
      "71747",
    ],
    "displayName": "Light ♥ Ariel",
    "iconId": "71747",
    "key": "71747-Light ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85628",
    ],
    "displayName": "Innocent Heart ♥ Ariel",
    "iconId": "85628",
    "key": "85628-Innocent Heart ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85626",
    ],
    "displayName": "Ice Soul ♥ Ariel",
    "iconId": "85626",
    "key": "85626-Ice Soul ♥ Ariel",
  },
  Object {
    "contents": Array [
      "50707",
    ],
    "displayName": "Hope ♥ Ariel",
    "iconId": "50707",
    "key": "50707-Hope ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85624",
    ],
    "displayName": "Free ♥ Ariel",
    "iconId": "85624",
    "key": "85624-Free ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85623",
    ],
    "displayName": "Flower Stone ♥ Ariel",
    "iconId": "85623",
    "key": "85623-Flower Stone ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85625",
    ],
    "displayName": "Colorful ♥ Ariel",
    "iconId": "85625",
    "key": "85625-Colorful ♥ Ariel",
  },
  Object {
    "contents": Array [
      "85621",
    ],
    "displayName": "Carefree ♥ Ariel",
    "iconId": "85621",
    "key": "85621-Carefree ♥ Ariel",
  },
  Object {
    "contents": Array [
      "11989",
    ],
    "displayName": "Ardor ♥ Ariel",
    "iconId": "11989",
    "key": "11989-Ardor ♥ Ariel",
  },
]
`;

exports[`FilterState OR filter - 'little mermaid' OR 'legend of light 1`] = `
FilterSet {
  "filters": Array [
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-ivmzq",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "Legend of Light",
    },
    Filter {
      "checkboxIsChecked": true,
      "filterType": "userInput",
      "filterValue": "name",
      "id": "filter-1pdwap",
      "selectType": "only",
      "selections": Array [],
      "userInputContains": true,
      "userInputValue": "Little Mermaid",
    },
  ],
  "id": "filterSet-x8y6p",
  "operator": "or",
}
`;

exports[`FilterState OR filter - 'little mermaid' OR 'legend of light 2`] = `
Array [
  Object {
    "contents": Array [
      60984,
      71980,
      22025,
      30996,
      86912,
      86913,
      86910,
      86911,
      90429,
      12277,
      86915,
      86914,
    ],
    "displayName": "The Legend of Light (Suit)",
    "iconId": 22025,
    "isSuit": true,
    "key": "22025-The Legend of Light (Suit)-0",
    "posed": false,
    "variation": "0",
  },
  Object {
    "contents": Array [
      86911,
      86912,
      22026,
      86910,
      86918,
      90429,
      86916,
      86917,
      12278,
    ],
    "displayName": "The Legend of Light (Posed Suit)",
    "iconId": 22026,
    "isSuit": true,
    "key": "22026-The Legend of Light (Posed Suit)-1",
    "posed": true,
    "variation": "1",
  },
  Object {
    "contents": Array [
      "22026",
    ],
    "displayName": "The Legend of Light",
    "iconId": "22026",
    "key": "22026-The Legend of Light",
  },
  Object {
    "contents": Array [
      71747,
      85619,
      40766,
      50707,
      85622,
      85623,
      85620,
      85621,
      85626,
      85627,
      90342,
      11989,
      85625,
      85624,
    ],
    "displayName": "The Little Mermaid (Suit)",
    "iconId": 40766,
    "isSuit": true,
    "key": "40766-The Little Mermaid (Suit)-0",
    "posed": false,
    "variation": "0",
  },
  Object {
    "contents": Array [
      85623,
      85625,
      21771,
      85619,
      90342,
      11990,
      85626,
      85627,
    ],
    "displayName": "The Little Mermaid (Posed Suit)",
    "iconId": 21771,
    "isSuit": true,
    "key": "21771-The Little Mermaid (Posed Suit)-1",
    "posed": true,
    "variation": "1",
  },
]
`;
